Fixed some vertical alignment issues in validation tab

--- a/src/internal-packages/validation/styles/rule-builder.less
+++ b/src/internal-packages/validation/styles/rule-builder.less
@@ -24,11 +24,17 @@
     .form-group {
       .form-control:first-child {
         border-radius: 3px 0 0 3px;
+        margin-bottom: 3px;
       }
     }
   }
 
-  .form-control, .dropdown-toggle { 
+  .form-control {
+    height: 28px;
+    line-height: 22px;
+  }
+
+  .dropdown-toggle {
     height: 28px;
     line-height: 28px;
   }
